# bump-version

./: Cargo.toml  readme.md  roadmap.md
src/: actions.rs  bump_version.rs  calc_version.rs  config.rs  error.rs  main.rs  package_json.rs  source.rs  version.rs
src/sources/: cargo_toml.rs  mod.rs  package_json.rs  util.rs
