[package]
name = "bump-version"
version = "0.7.0"
edition = "2024"

[dependencies]
colored = "3.0"
env_logger = "0.11"
git2 = "0.20"
log = "0.4"
thiserror = "2.0"

[dependencies.clap]
version = "4.5"
features = ["cargo"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.toml]
version = "0.8"
features = ["indexmap", "preserve_order"]

[dependencies.indexmap]
version = "2.9"
features = ["serde"]
