[package]
name = "bump-version"
version = "1.2.0"
edition = "2024"
description = "Read, bump, write, commit and tag versions, automatically, in one line!"
authors = ["Sabu Siyad <mail@ssiyad.com>"]
license = "MIT"
repository = "https://github.com/ssiyad/bump-version"
readme = "README.md"
keywords = ["versioning", "semver", "bump", "release", "package"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
colored = "3.0"
env_logger = "0.11"
git2 = "0.20"
log = "0.4"
tera = "1.20"
thiserror = "2.0"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.toml]
version = "0.8"
features = [
    "indexmap",
    "preserve_order",
]

[dependencies.indexmap]
version = "2.9"
features = ["serde"]
